added run-all script